--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohttp==3.8.1
-bandit==1.7.2
+bandit==1.7.4
 beautifulsoup4==4.10.0
 black==22.1.0
 cchardet==2.1.7
@@ -8,4 +8,4 @@ more-itertools==8.12.0
 mypy==0.931
 mypy-extensions==0.4.3
 pylint==2.12.2
-urlextract==1.5.0
+urlextract~=1.5.0
