--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -15,19 +15,20 @@ jobs:
             - name: setup python
               uses: actions/setup-python@v4
               with:
-                  python-version: "3.11" # install the python version needed
+                  python-version: "3.11"
 
             - name: install python packages
               run: |
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
 
-            - name: execute py script # run scraper.py to get the latest data
+            - name: execute py script
               run: python scraper.py
 
-            - name: create ABP list
+            - name: create adblocking lists
               run: |
-                  sed 's/^/\|\|/;s/$/\$all/' global-anti-scam-org-scam-urls.txt > global-anti-scam-org-scam-urls-ABP.txt
+                  sed 's/^/\|\|/;s/$/\^/' global-anti-scam-org-scam-urls-pihole.txt > global-anti-scam-org-scam-urls-ABP.txt
+                  sed 's/^/\|\|/;s/$/\^$all/' global-anti-scam-org-scam-urls-pihole.txt > global-anti-scam-org-scam-urls-UBO.txt
 
             - name: commit files
               run: |
