--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -12,6 +12,11 @@ jobs:
             - name: checkout repo content
               uses: actions/checkout@v3
 
+            - name: install chromedriver
+              run: |
+                  wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+                  dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
+
             - name: setup python
               uses: actions/setup-python@v4
               with:
