--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-aiohttp==3.8.4
-bandit==1.7.5
-beautifulsoup4==4.12.2
-black==23.3.0
-lxml==4.9.2
-more-itertools==9.1.0
-mypy==1.2.0
-mypy-extensions==1.0.0
-pylint==2.17.2
-tldextract==3.4.0
-urlextract==1.8.0
+bandit==1.7
+black==23.3
+mypy==1.2
+mypy-extensions==1.0
+pylint==2.17
+requests==2.28
+selenium==4.9
+tldextract==3.4
