--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -15,7 +15,8 @@ jobs:
             - name: install chromedriver
               run: |
                   wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-                  dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
+                  sudo dpkg -i google-chrome-stable_current_amd64.deb
+                  sudo apt-get -fy install
 
             - name: setup python
               uses: actions/setup-python@v4
