--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -17,6 +17,7 @@ jobs:
                   wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
                   sudo dpkg -i google-chrome-stable_current_amd64.deb
                   sudo apt-get -fy install
+                  rm google-chrome-stable_current_amd64.deb
 
             - name: setup python
               uses: actions/setup-python@v4
