--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -19,15 +19,10 @@ jobs:
                   sudo apt-get -fy install
                   rm google-chrome-stable_current_amd64.deb
 
-            - name: setup python
-              uses: actions/setup-python@v4
-              with:
-                  python-version: "3.11"
-
             - name: install python packages
               run: |
                   python -m pip install --upgrade pip
-                  pip install -r requirements.txt
+                  pip install $(grep -v '^ *#\|^bandit\|^black\|^mypy\|^mypy-extensions\|^pylint' requirements.txt | grep .)
 
             - name: execute py script
               run: python scraper.py
