--- a/.tokeignore
+++ b/.tokeignore
@@ -7,4 +7,5 @@ requirements.txt
 scraper.py
 global-anti-scam-org-scam-urls-ABP.txt
 global-anti-scam-org-scam-urls-UBO.txt
+global-anti-scam-org-scam-urls-UBL.txt
 global-anti-scam-org-scam-urls-pihole.txt
