--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -12,18 +12,17 @@ jobs:
             - name: checkout repo content
               uses: actions/checkout@v4
 
-            - name: setup python
-              uses: actions/setup-python@v5
+            - name: Install uv
+              uses: astral-sh/setup-uv@v6
               with:
-                  python-version: "3.x"
+                version: "0.6.16"
 
-            - name: install python packages
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install $(grep -v '^ *#\|^bandit\|^black\|^mypy\|^mypy-extensions\|^pylint' requirements.txt | grep .)
+            - uses: actions/setup-python@v5
+              with:
+                python-version-file: "pyproject.toml"
 
             - name: execute py script
-              run: python scraper.py
+              run: uv run python scraper.py
 
             - name: create adblocking lists
               run: |
